[gd_scene load_steps=10 format=3 uid="uid://didokm4tlc6hp"]

[ext_resource type="Script" uid="uid://bcu6ay0n1mwp0" path="res://Scripts/components/card_handler.gd" id="1_nchsg"]
[ext_resource type="Script" uid="uid://nigr7c5bojyh" path="res://Scripts/components/new_rodada.gd" id="1_v4yau"]
[ext_resource type="Script" uid="uid://dob71sliqrepf" path="res://Scripts/components/slot_manager.gd" id="2_ch8as"]
[ext_resource type="Script" uid="uid://dgc28ukwlmsd4" path="res://Scripts/abstract/rodada_judge.gd" id="2_g6rep"]
[ext_resource type="Script" uid="uid://cln0uuthmbl86" path="res://Scripts/components/position_helper.gd" id="2_na6wh"]
[ext_resource type="Script" uid="uid://b54nxw0t5xkir" path="res://Scripts/abstract/slot_sorter.gd" id="4_8lgmq"]
[ext_resource type="Script" uid="uid://dsruuxfmru7ck" path="res://Scripts/components/animation_handler.gd" id="4_v4yau"]
[ext_resource type="Script" uid="uid://bisb84kcg8sa1" path="res://Scripts/components/label.gd" id="5_r6up7"]
[ext_resource type="Theme" uid="uid://udf724xr0hla" path="res://Assets/cardLegendatheme.tres" id="8_8lgmq"]

[node name="Rodada" type="Node2D"]
script = ExtResource("1_v4yau")

[node name="Rodada_UIHandler" type="CanvasLayer" parent="."]

[node name="PositionHelper" type="Control" parent="Rodada_UIHandler"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_na6wh")

[node name="Label" type="Label" parent="Rodada_UIHandler/PositionHelper"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0104167
anchor_top = 0.00771605
anchor_right = 0.0755208
anchor_bottom = 0.0910494
theme_override_font_sizes/font_size = 20
text = "fps = "
script = ExtResource("5_r6up7")
metadata/_edit_use_anchors_ = true

[node name="result_debug" type="Label" parent="Rodada_UIHandler/PositionHelper"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.0617284
anchor_right = 0.980035
anchor_bottom = 0.212963
theme = ExtResource("8_8lgmq")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="SlotManager" type="Control" parent="Rodada_UIHandler/PositionHelper"]
custom_minimum_size = Vector2(812, 465)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -840.0
offset_top = -506.0
offset_right = -28.0
offset_bottom = -18.0
grow_horizontal = 0
grow_vertical = 0

[node name="RodadaJudge" type="Node" parent="."]
script = ExtResource("2_g6rep")

[node name="CardHandler" type="Node2D" parent="."]
script = ExtResource("1_nchsg")

[node name="AnimationHandler" type="Node2D" parent="CardHandler"]
position = Vector2(726, -146)
scale = Vector2(0.4, 0.4)
script = ExtResource("4_v4yau")

[node name="SlotManager" type="Node2D" parent="CardHandler/AnimationHandler"]
unique_name_in_owner = true
position = Vector2(-1077.5, 725)
script = ExtResource("2_ch8as")

[node name="Table" type="Node2D" parent="CardHandler/AnimationHandler/SlotManager"]
position = Vector2(182.5, 280)
script = ExtResource("4_8lgmq")
spacing = 20
n_slots = 5
metadata/_edit_use_anchors_ = true

[node name="Hand" type="Node2D" parent="CardHandler/AnimationHandler/SlotManager"]
position = Vector2(182.5, 892.5)
script = ExtResource("4_8lgmq")
spacing = 20
n_slots = 5
metadata/_edit_use_anchors_ = true

[connection signal="resized" from="Rodada_UIHandler/PositionHelper" to="Rodada_UIHandler/PositionHelper" method="_on_resized"]
